Verwysing nå döärverwyssyde repareerd ([[Krödde]] nå [[Krödde (tiedschrift)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nedersaksische_literatuur_in_de_21e_ieuw.mw
+++ b/Nedersaksische_literatuur_in_de_21e_ieuw.mw
@@ -1,4 +1,4 @@
-{{Zie dv|'''Dit artikel gef een aoverzicht van de Nedersaksische literatuur in de 21e ieuw. Zie ok de artikels [[Nedersaksische literatuur töt 1900]] en [[Nedersaksische literatuur in de 20e ieuw]].}}
+{{Zie dv|'''Dit artikel gef een aoverzicht van de Nedersaksische literatuur in de 21e ieuw. Zie ok de artikels [[Nedersaksische literatuur töt 1900]] en [[Nedersaksische literatuur in de 20e ieuw]].'''}}
 De '''Nedersaksische literatuur in de 21e ieuw''' in [[Nederlaand]] is de literaire schrieverije in netzölfde welke variaant van 't [[Nedersaksisch]] in Nederlaand van dizze ieuw. Dizze schrieverije is een voortzetting van de emancipeerde [[Nedersaksische literatuur van de 20e ieuw]], die heur op zich weer ontwikkelde uut de [[Nedersaksische literatuur töt 1900]].
 
 ==Trends en kenmarken==
@@ -21,7 +21,7 @@ De schrievers die in dizze bondige regio-aoverzichten as veurbielden enuumd wör
 ===Grunning===
 ====Tiedschriften en priezen====
 [[Ofbeelding:AssenDagbladVanHetNoorden2017.jpg|thumb|270px|'t [[Dagblad van het Noorden]], kraante in Grunning en Drenthe, looft de Dagblad van het Noorden Streektaalpries uut]]
-In pervincie Grunning vunden literaire schrievers menare al sinds 1982 in tiedschrift ''[[Krödde]]''. In 2015 schee ''Krödde'' dermit uut, toen de redactie miende det 't tiedschrift in pepieren vörm niet of onvoldoende mitkomen kun mit neimoodse media en der gien nei redactiebloed evunden kun wörden. Haoste mitiene wördden een digitaal alternatief, tiedschrift ''[[Oader (tiedschrift)|Oader]]'', in 't ende ezet deur schrievers die betrökken ewest waren bij ''Krödde''. Heufdredacteur van ''Oader'' is de slim productieve verhalenschriever en dichter [[Tonko Ufkes]] (1958); zien mit-redacteurs bint [[Jan Glas]] (1958) en [[Hindry Schoonhoven]] (1978). Wieder verschient sinds 1983 ''[[Toal en Taiken|Toal en Taiken: tiedschrift veur Grunneger kultuur]]'', mit as endredacteur [[Jan Groenbroek]] (1946). Gien specifiek literair tiedschrift, mar wal een podium en voedingsbodem veur Grunneger schrieftalent.
+In pervincie Grunning vunden literaire schrievers menare al sinds 1982 in tiedschrift ''[[Krödde (tiedschrift)|Krödde]]''. In 2015 schee ''Krödde'' dermit uut, toen de redactie miende det 't tiedschrift in pepieren vörm niet of onvoldoende mitkomen kun mit neimoodse media en der gien nei redactiebloed evunden kun wörden. Haoste mitiene wördden een digitaal alternatief, tiedschrift ''[[Oader (tiedschrift)|Oader]]'', in 't ende ezet deur schrievers die betrökken ewest waren bij ''Krödde''. Heufdredacteur van ''Oader'' is de slim productieve verhalenschriever en dichter [[Tonko Ufkes]] (1958); zien mit-redacteurs bint [[Jan Glas]] (1958) en [[Hindry Schoonhoven]] (1978). Wieder verschient sinds 1983 ''[[Toal en Taiken|Toal en Taiken: tiedschrift veur Grunneger kultuur]]'', mit as endredacteur [[Jan Groenbroek]] (1946). Gien specifiek literair tiedschrift, mar wal een podium en voedingsbodem veur Grunneger schrieftalent.
 
 De Grunnegstalige literatuur hef slim wille van een antal literaire priezen, die de andacht vestigt op talentvol wark van schrievers en dichters en heur anfietert um heurzölf in de schrieverije te ontwikkeln. Samen mit zaken as tiedschriften en taalcursussen, heurt zokke priezen töt de raandveurweerden um schieverije in de streektaal meugelijk te maken. 't Is ja niet vanzölfsprekend en 't gebeurt niet vanzölf det een talentvolle schriever beslöt hum of heur uut te drokken in de streektaal naost, of in stee van, de laandstaal. Een in 't oog springende pries veur Nedersaksische literatuur en meziek in Grunning, Drenthe en Stellingwarf is de [[Dagblad van het Noorden Streektaalpries]], die sinds 2005 uutereikt wördt. Nog langer bestiet de [[Literaire Pries]], die [[Stichting 't Grunneger Bouk]] sinds 1981 uutlangt veur Grunnegstalig wark.
 
