Verwysing nå döärverwyssyde repareerd ([[Locht]] nå [[Locht (straoling)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/De_Hormoonfactor.mw
+++ b/De_Hormoonfactor.mw
@@ -29,7 +29,7 @@ Psychiese en emosionele stress hef n grote invleud op de hormonen veural op de [
 * gauw zweten
 * zin hebben an [[zeut]]/[[zalt (smaak)|zout]]
 * lege [[bloeddrok]] (n belangriek symptoom!)
-* geveulig veur scharp [[locht]], starke [[geur]]en of harde [[geluud|gelujen]]
+* geveulig veur scharp [[Locht (straoling)|locht]], starke [[geur]]en of harde [[geluud|gelujen]]
 * minder/gien zin an [[seks]]
 * donkere kringen onder de [[oge]]n
 * [[allergie]]ën/[[auto-immuunziekte]]s, enz.
