Verwysing nå döärverwyssyde repareerd ([[Zolt]] nå [[zalten]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Melk.mw
+++ b/Melk.mw
@@ -1,5 +1,5 @@
 {{Zie dv|Aandere betekenissen van '''melk''' vie'j op [[Melk (deurverwiespagina)]]}}[[Ofbeelding:glas_melk.jpg|thumb|250px|Glas melk]]
-'''Melk''' is n vloeistof (n [[emulsie]] van vetdruppels in [[wäter]]) die an-emääkt wört deur vrouwelike [[zoogdieren]] die net n jong op de weerld ezet ebben. Melk bestet uut [[vet]]ten, [[eiwit]]ten, [[laktose]] en [[zolt]]en. De melk die [[mense|meinsen]] anmäken numen we ''[[zog]]'' of ''moejermelk''. Veur de produksie van melk veur de [[voedingsindustrie]] wört miestal [[koe]]melk gebruukt. Ien liter koemelk weg 1.030 gram. Op veul kleinere skaole wörren [[sik|geitemelk]] en [[skaop]]emelk gebruukt. In onder aandere [[Ruslaand]] wört ok [[peerd]]emelk emääkt.
+'''Melk''' is n vloeistof (n [[emulsie]] van vetdruppels in [[wäter]]) die an-emääkt wört deur vrouwelike [[zoogdieren]] die net n jong op de weerld ezet ebben. Melk bestet uut [[vet]]ten, [[eiwit]]ten, [[laktose]] en [[zalten|zolten]]. De melk die [[mense|meinsen]] anmäken numen we ''[[zog]]'' of ''moejermelk''. Veur de produksie van melk veur de [[voedingsindustrie]] wört miestal [[koe]]melk gebruukt. Ien liter koemelk weg 1.030 gram. Op veul kleinere skaole wörren [[sik|geitemelk]] en [[skaop]]emelk gebruukt. In onder aandere [[Ruslaand]] wört ok [[peerd]]emelk emääkt.
 
 == Vetge-alten ==
 Melk waor gien vet uut e-ääld is wört ''volle melk'' enuumd. t Deruut älen van ongeveer de älfte van de vetten uut de melk levert '''alfvolle melk''' op. In '''maogere melk''' zit nog minder vet. Dit levert de volgende vetge-altes op (uutedrokt in gram vet per liter melk):
