Verwysing nå döärverwyssyde repareerd ([[Riest]] nå [[Ries (Oryza sativa)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Melk.mw
+++ b/Melk.mw
@@ -26,7 +26,7 @@ In rauwe melk zitten ook kwaolike bakteriën, zo as ''[[Escherichia coli]]'', ''
 
 == Laktose-intoleransie ==
 [[Bestaand:LacIntol-World2.png|thumb|Laktose-intoleransie over de weerld]]
-Der bin meinsen die [[allergie]]s bin veur koemelkeiwit, dat numen we dan n ''koemelkallergie''. Dit komt veural veur bi'j zoegelingen en jonge kienders. Miestal ebben ze ier op lätere leeftied gien last meer van. 2 tot 6% van de zoegelingen ef disse allergie. Veur disse meinsen en veur meinsen mit n [[laktose]]-intoleransie is der ook n melkvervanger van plaantaordige oorsprong bi'jveurbeeld op basis van [[sojaboon|soja]], dit numen we [[sojamelk]]. Disse melk bestet uut vet, wäter en [[eiwitten]], mär soja (en dus ook sojamelk) is minder geskikt veur mannen deurdat der fyto-oestrogenen in zitten, n vrouwelik [[ormoon]] dat onder aandere veur borstvorming zörgt bi'j mannen.<ref>Hormoonbalansfactor, Ralph Moorman, blz. 63, 64</ref> Aandere melkvervangers bin: [[haever|ävermelk]], [[amandel]]melk, [[haozelnoeten|äzeneutemelk]] (of aandere neuten), [[riest]]emelk (deur riestemelk zal de bloedsukerspiegel wel stärk stiegen). Bi'j koemelkeiwitallergie kan ook [[sik|geitemelk]] egeven wörren. Umdat ook ier laktose in zit elpt t niet bi'j laktose-intoleransie.
+Der bin meinsen die [[allergie]]s bin veur koemelkeiwit, dat numen we dan n ''koemelkallergie''. Dit komt veural veur bi'j zoegelingen en jonge kienders. Miestal ebben ze ier op lätere leeftied gien last meer van. 2 tot 6% van de zoegelingen ef disse allergie. Veur disse meinsen en veur meinsen mit n [[laktose]]-intoleransie is der ook n melkvervanger van plaantaordige oorsprong bi'jveurbeeld op basis van [[sojaboon|soja]], dit numen we [[sojamelk]]. Disse melk bestet uut vet, wäter en [[eiwitten]], mär soja (en dus ook sojamelk) is minder geskikt veur mannen deurdat der fyto-oestrogenen in zitten, n vrouwelik [[ormoon]] dat onder aandere veur borstvorming zörgt bi'j mannen.<ref>Hormoonbalansfactor, Ralph Moorman, blz. 63, 64</ref> Aandere melkvervangers bin: [[haever|ävermelk]], [[amandel]]melk, [[haozelnoeten|äzeneutemelk]] (of aandere neuten), [[Ries (Oryza sativa)|riest]]emelk (deur riestemelk zal de bloedsukerspiegel wel stärk stiegen). Bi'j koemelkeiwitallergie kan ook [[sik|geitemelk]] egeven wörren. Umdat ook ier laktose in zit elpt t niet bi'j laktose-intoleransie.
 
 t Merendiel van de meinseid, eskat op 75 tot 81%, is laktose-intolerant, ook in de westerse weerld (waor väke veul melk edrönken wört) bin meinsen väke laktose-intolerant zonder t zelf te märken. 
 
