Verwysing nå döärverwyssyde repareerd ([[Riest]] nå [[Ries (Oryza sativa)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Gluten.mw
+++ b/Gluten.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Gluten Sources.png|thumb|right|220px|Vier bronnen van gluten: [[weite]]meel (bovenan), Europees [[spelt]] (rechts), [[garste]] (onderan) en [[raai|rogge]] (links).]]
+[[Bestaand:Gluten Sources.png|thumb|220px|Vier bronnen van gluten: [[weite]]meel (bovenan), Europees [[spelt]] (rechts), [[garste]] (onderan) en [[raai|rogge]] (links).]]
 '''Gluten''' (uut t [[Latien]], betekent letterlik ''liem'') is de naam van n groep [[eiwitten]] die, liek as [[zetmeel]], in t [[kiemwit]] (t endosperm) van alle [[graon]]en  zit ([[weite]], [[raai|rogge]], [[garste]], [[mais]], [[Ries (Oryza sativa)|rieste]], [[spelt]], [[haver]] en [[teff]]) en in de produkten die dervan emaakt wörden. t Eiwit van weite besteet veur zo'n 80% uut gluten. [[Durum (weite)|Durum]] (''Triticum durum'' - n graonsoorte) wörden ''harde weite'' eneumd en hef n alderbarstends hoog glutengehalte. Gluten is niet oplosbaor in waoter en wörden deur de plaante in de graonkorrel op-esleugen as reservevoedsel.
 
 In niet-graonen, zo as [[wilde rieste]], [[boeked|boekweite]], [[quinoa]], [[amarant (geslacht)|amaranth]], [[sojaboon|sojabonen]] en [[zunnebloempitte]]n zit gien gluten. In dierlike produkten zit van nature nooit gluten, as t bewarkt is kan t der wel in zitten (bv. vleis mit n paneerlage, krujen waor t bie-edaon is en zoksoort dingen).
@@ -25,7 +25,7 @@ Deurda'j gluten niet in waoter op kunnen lossen kan t gemakkelik uut weitemeel o
 Meensen mit [[seuliakie]] bin overgeveulig veur n bepaold gedeelte van t gluten (de [[gliadine]]s) en mutten n ''glutenvrie'' dieet volgen. Hierbie mut n onderscheid emaakt wörden tussen gluten die seuliakie kan veroorzaken (zo as in weite, rogge, garste en, in mindere maote, haver) en gluten die gien seuliakie veroorzaakt (zo as in rieste, mais en teff). t Binnenkriegen van gliadines zörgt bie disse meensen via n auto-immuunreaksie veur n beschaodiging van de [[darmvlokken]] van de [[dunne darm]], wat as gevolg hef dat de opname van de bouwstoffen uut voeding minder wörden. As alle produkten mit gliadines vermejen wörden, herstellen de darmvlokken zich en kunnen voedingsstoffen weer normaal op-eneumen wörden. De darmvlokken herstellen zich overigens niet blievend (t is niet te genezen), a'j weer gluten binnenkriegen dan kan dat weer tot n verslichtering liejen.
 
 ==== Glutenvrieje voeding ====
-Meensen mit seuliakie mutten levenslank n strikt gliadinevrie (in de spreektaal ''glutenvrie'') dieet volgen. De haandel in ''glutenvrieje'' produkten is in opkomst. Waoronder [[teff]] en produkten op baosis van [[mais]], [[riest]]e en [[boeked|boekweite]] wörden as vervanger gebruukt. In [[haver]]vlokken kan gluten zitten as t verwarkt is deur n masine die oek glutenprodukten verwarkt. Umdat gluten in zoveul voedingsmiddels veurkömp is t belangriek um te weten wa'j eten bie n glutenvrie dieet.
+Meensen mit seuliakie mutten levenslank n strikt gliadinevrie (in de spreektaal ''glutenvrie'') dieet volgen. De haandel in ''glutenvrieje'' produkten is in opkomst. Waoronder [[teff]] en produkten op baosis van [[mais]], [[Ries (Oryza sativa)|riest]]e en [[boeked|boekweite]] wörden as vervanger gebruukt. In [[haver]]vlokken kan gluten zitten as t verwarkt is deur n masine die oek glutenprodukten verwarkt. Umdat gluten in zoveul voedingsmiddels veurkömp is t belangriek um te weten wa'j eten bie n glutenvrie dieet.
 
 === Glutenintoleransie ===
 Glutenintoleransie of glutenovergeveuligheid is n boel andoeningen bie mekaar, waoronder [[seuliakie]] en [[glutenallergie]], waorbie t gluten n verkeerde uutwarking op t lief hef. ''Idiopathiese glutenintoleransie'' ku'j zien as n niet-allergiese reaksie en n niet-auto-immuunreaksie waorbie t binnenkriegen van gluten tot symptomen kan liejen die te vergelieken bin mit seuliakie of glutenallergie (of aandere andoeningen die deur gluten veroorzaakt wörden).
