Verwysing nå döärverwyssyde repareerd ([[Zwiendrecht]] nå [[Zwiendrecht (Nederlaand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Rien.mw
+++ b/Rien.mw
@@ -132,7 +132,7 @@ Wat kilometers ten westen van [[Emmerik]] geet den Rien Duutsland uut en streumt
 * [[Gorinchem]] (r)
 * [[Woudrichem (stad)|Woudrichem]] (l)
 * [[Dordrecht]] (Ligt an den [[Olden Maas]]; in feite ene van de zi-jtekke van den Waal.)
-* [[Zwiendrecht]] (l)
+* [[Zwiendrecht (Nederlaand)|Zwiendrecht]] (l)
 
 === Lengs den [[Iessel]] ===
 * [[Doezebarg]] (r)
