Verwysing nå döärverwyssyde repareerd ([[Aksent]] nå [[Aksent (radioprogramma)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/RTV_Oost.mw
+++ b/RTV_Oost.mw
@@ -23,12 +23,12 @@ Sund 2002 is RTV Oost mit-organisator van een karstnachtdienst die in 't Twèent
 
 Op oldejaorsaobend 2007 hef TV Oost de Twèentstalige oldejaorsconference 'mBâh!' van [[Helligen Hendrik]] uutezunden. 
 
-Op Radio Oost prissenteerden [[Monique Sleiderink]] en [[Bert Eeftink]] töt en met [[2010]] 't streektaalpergramma [[Aksent]], mit gasten en meziek uut verschillende (ok niet-[[Nedersaksisch]]e) kontreien.
+Op Radio Oost prissenteerden [[Monique Sleiderink]] en [[Bert Eeftink]] töt en met [[2010]] 't streektaalpergramma [[Aksent (radioprogramma)|Aksent]], mit gasten en meziek uut verschillende (ok niet-[[Nedersaksisch]]e) kontreien.
 
 Mit [[Umroep Gelderlaand]] onderholdt RTV Oost 't Nedersaksische meziekstesjon [[Alles Plat]].
 
 == Uutgaonde verwiezings ==
-* [http://www.rtvoost.nl Webstee van RTV Oost]
+* [http://www.rtvoost.nl/ Webstee van RTV Oost]
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
