Verwysing nå döärverwyssyde repareerd ([[Laoren]] nå [[Laoren (Noord-Holland)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Heed_(laandschap).mw
+++ b/Heed_(laandschap).mw
@@ -70,7 +70,7 @@ Heed op de zaandgronden in t binnenlaand is n oud en deur de eeuwen evormp halfn
 ==Foto-uutstallige==
 <gallery>
 Ofbeelding:Elspeetheed.jpg|De heed bie Elspeet
-Ofbeelding:Heath - Laren.jpg|Heed bie [[Laoren]]
+Ofbeelding:Heath - Laren.jpg|Heed bie [[Laoren (Noord-Holland)|Laoren]]
 Ofbeelding:Drouwenerzand.JPG|Drouwenerzaand bie [[Assen]]
 Ofbeelding:FloweringHeath-1.JPG|Bleuiende heed bie [[Ee (stad)|Ede]]
 </gallery>
