--- a/Łobez.mw
+++ b/Łobez.mw
@@ -68,7 +68,7 @@ PlotData=
 <gallery>
 Lobez kosciol kz.jpg
 Kamienica w Łobzie (obok dworca PKP).jpg
-abytkowa Poczta w Łobzie.JPG
+Zabytkowa Poczta w Łobzie.JPG
 </gallery>
 
 == Zustersteden ==
