*Empty MediaWiki Message*

--- a/10e_eeuw_v._Chr..mw
+++ b/10e_eeuw_v._Chr..mw
@@ -83,4 +83,5 @@
 * Veur zoveer bekend vestigen luui zich veur 't eers in de streek rond [[Plymouth]] in [[Engelanad]].
 * 't Maken van ceremoniële gouwen hoeden in [[Midden-Europa]].
 
+{{Dialekt|wvel}}
 [[Kategorie:10e eeuw v. Chr.|!!]]
