*Empty MediaWiki Message*

--- a/2008.mw
+++ b/2008.mw
@@ -95,4 +95,5 @@ De volgende gebeurtenissen vunnen plaose in 't jaor '''2008'''
 == Uut de tied ==
 * ...
 
+{{Dialekt|wvel}}
 [[Kategorie:21e eeuw|#2008]]
