*Empty MediaWiki Message*

--- a/1795.mw
+++ b/1795.mw
@@ -45,3 +45,5 @@
 * [[31 augustus]] - [[François Philidor]] (68), [[Frankriek|Fraansen]] meister in [[blindschaken]]
 * [[19 september]] - [[Tula (Curaçao)|Tula]], unofhänkelekheidsstrieder en anvoerder slavenopstaand, ter dood ebracht in Curaçao
 * [[6 november]] - [[Georg Benda]] (73), Tsjechischen komponist, klavecinist, violist en hoboïst
+
+{{Dialekt|act}}
