--- a/1818.mw
+++ b/1818.mw
@@ -55,3 +55,5 @@
 * [[7 mei|7]] - [[Leopold Antonín Koželuh]] (70), Boheems componist, muzeekpedagoog en pianist
 ;oktober
 *[[28 oktober|28]] - [[Abigail Adams]] (73), 'First Lady' (vrouwe van John Adams)
+
+{{Dialekt|act}}
