--- a/2014.mw
+++ b/2014.mw
@@ -56,3 +56,5 @@ t Jaor '''2014''' is n jaortal volgens de christelike jaortelling.
 == Uut de tied ==
 *[[11 jannewaori|11 jan]] - [[Ariel Sharon]], [[Israel]]iese minister-president
 *[[11 augustus|11 aug]] - [[Robin Williams]], Amerikaanse akteur en grappenmaker
+
+{{Dialekt|wvel}}
