--- a/Helsinki.mw
+++ b/Helsinki.mw
@@ -7,7 +7,7 @@ De stad is internationaal te besöken oaver de internatinale vluchthaven [[Helsi
 Helsinki was de Wearld-Unwarpershöyvdstad van [[2012]], gastheyr vöär de [[Olympiske Summerspöllen]] van [[1952]] en de organisator van et 52. Eurovisy Songfestival van 2007. Et steyt te book med de höygste städelike leavensstandaard in de wearld. In [[2011]] satten et [[Groutbrittannie|britske]] blad ''[[Monocle]]'' Helsinki boaven de lyste van leavbårste städen.
 
 ==Namenherkumst==
-Volgens ne teory uut de 17. eyw kümmen sweydske kolonisten vanuut [[Hälsingland]] in centraal Sweyden an up de küststreaken van Finland, up de steade wat nu bekend steyt as de [[Vantaarivyr]]. See nöömden et Hensingå ("Helsingerivyr"), wåruut de namen Helsingedorp en ne lyknamige karke in de 14. eyw. Disse teory is ümstreyden, ümdat uut dialektundersöök blikt at de kolonisten uut de streake rund Uppland kümmen. Anderen meynet at de name is afleided van et sweydske ''helsing'', nen olden form van et woord 'hals', wat verwist når et nauwe deyl van de rivyr. Andere skandinaviske städen in vergelykbåre landskappen hebbet vergelykbåre namen, sou as [[Hensingør]] in [[Dänemarken]] en [[Helsingborg]] in Sweyden.
+Volgens ne teory uut de 17. eyw kümmen sweydske kolonisten vanuut [[Hälsingland]] in centraal Sweyden an up de küststreaken van Finland, up de steade wat nu bekend steyt as de [[Vantaarivyr]]. See nöömden et Hensingå ("Helsingerivyr"), wåruut de namen Helsingedorp en ne lyknamige karke in de 14. eyw untstünden. Disse teory is ümstreyden, ümdat uut dialektundersöök blikt at de kolonisten uut de streake rund Uppland kümmen, en dat had en andere name upeleyverd. Anderen meynet at de name is afleided van et sweydske ''helsing'', nen olden form van et woord 'hals', wat verwist når et nauwe deyl van de rivyr. Andere skandinaviske städen in vergelykbåre landskappen hebbet vergelykbåre namen, sou as [[Hensingør]] in [[Dänemarken]] en [[Helsingborg]] in Sweyden.
 
 Do as de neadersetting [[Forsby]] stichted wör in [[1548]], kreag et de name ''Helsinge fors'', wat "Helsinge ströym" bedüdet. Dee name slüt up de Vanhankaupunginkoski-ströymversnellingen by de brunne van de rivyr. Vandåruut untwikkelden sik de name Helsinge of Helsing, wat verfinsked wör töt Helsinki.
 
