--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -639,6 +639,17 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 | 413
 |style="background:#FFFFBF;"| '''1stes'''
 |-
+! 2020
+|align=left| [[Formule Eyn Werldkampioonskap van 2020|Formule Eyn]]
+|style="text-align:left;"| [[Mercedes-Benz in de Formule Eyn|Mercedes-AMG Petronas F1 Team]]
+| [[#2020R|16]]
+| 11
+| 10
+| 6
+| 14
+| 347
+|style="background:#FFFFBF;"|'''1stes'''
+|-
 |}
 
 ===Komplete resultåten van de Formule 3 Euro Series===
