*Empty MediaWiki Message*

--- a/Helsinki.mw
+++ b/Helsinki.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:1024px-Helsinki_July_2013-27a.jpg|thumb|right|200px|De katedråle van Helsinki, nen grouten turistentrekker]]
+[[Ofbeelding:Helsinki_July_2013-27a.jpg|thumb|right|200px|De katedråle van Helsinki, nen grouten turistentrekker]]
 '''Helsinki''' (up syn [[Zweeds|sweydsk]] en ölder [[neadersassisk]] ouk '''Helsingfors''') is de höyvdstad van [[Finlaand|Finland]]. Der woanet 656.229 lüde in de binnenstad. Med de vöärstäden der by kümt et inwoanertal up 1.268.296. Dårmed is et med afstand de grötste stad van Finland en et vöärnaamste centrum vöär politik, underwys, geldsaken, kultuur en undersöök. Helsingfors ligt 179 kilometer van de tweyde-grötste stad [[Tampere]], 80 kilometer van [[Tallinn]] (de höyvdstad van [[Estland]]), 400 km up et ousten van [[Stockholm]] in [[Sweyden]] en 300 km westelik van [[Suntpetersburg]] in [[Rusland]]. Med disse dree läste städen hevt Helsinki van oldsher nauwe banden.
 
 De vöärstäden [[Espoo]], [[Vantaa]] en [[Kauniainen]] en noch wat andere forensenstäden maket de Gröttere Metropole Helsinki, med en inwoanertal van by mekander 1,5 miljoon lüde. Et is Finlands eanigste metropole, de noordelikste metropole van de wearld med meyr as en miljoon inwoaners en de noordelikste höyvdstad van de EU. Nå Stockholm en Oslo is Helsinki de grötste gemeynde in [[Skandinavie]]. Binnen de stad geldet beide [[fins|finsk]] en sweydsk as officiäle språken. 
