Verwysing nå döärverwyssyde repareerd ([[Middelburg]] nå [[Middelburg (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Burcht.mw
+++ b/Burcht.mw
@@ -12,7 +12,7 @@ Synoniemen bunt slot of [[kasteel]]. Lokaal sprekt ze boavendeen van:
 * [[Havezate]] in [[Drenthe]], [[Gelderlaand]] en [[Oaveriessel]]
 
 == Herkomst van et weurd ==
-Et eurspronkeleke weurd veur burcht is '''burg''', geliek an et Germaanse weurd ''Burg''. Et betekkenden ok 'verstarkte neaderzetting', dus: stad. Et eurspronkeleke weurd is beholden ebleaven in weurden as ''burger'', ''burgemeister'', ''burggraaf'' en ''burgwal'', dat bi-jveurbeeld in Amsterdam nog in stroatnamen veurkump (bi-jveurbeeld den ''Ni-jenzieds Veurburgwal''), en doarnoast in n groot antal plaatsnamen: [[Middelburg]], [[Domburg]], [[Borgt]], [[Oost- en West-Souburg|Souburg]], [[Burgh-Haamstede]], [[Den Burg]] (Texel), [[Leopoldsburg]], [[Luxemburg (laand)|Luxemburg]], [[Boksburg]] en zo wieter. 
+Et eurspronkeleke weurd veur burcht is '''burg''', geliek an et Germaanse weurd ''Burg''. Et betekkenden ok 'verstarkte neaderzetting', dus: stad. Et eurspronkeleke weurd is beholden ebleaven in weurden as ''burger'', ''burgemeister'', ''burggraaf'' en ''burgwal'', dat bi-jveurbeeld in Amsterdam nog in stroatnamen veurkump (bi-jveurbeeld den ''Ni-jenzieds Veurburgwal''), en doarnoast in n groot antal plaatsnamen: [[Middelburg (stad)|Middelburg]], [[Domburg]], [[Borgt]], [[Oost- en West-Souburg|Souburg]], [[Burgh-Haamstede]], [[Den Burg]] (Texel), [[Leopoldsburg]], [[Luxemburg (laand)|Luxemburg]], [[Boksburg]] en zo wieter. 
 
 ''Burg'' beheurt tot nen trop weurden dee later nen -t hebt ekreggen (aandere veurbeelden bunt ''inkt'', dat in et Engels ''ink'' is, en ''riest''). Deur dizzen t is in de spelling den eurspronkeleken g vervolgens in ch veraanderd: de spelling ''burgt'' kump in olde teksten veur, moar vandage is et nen ''burcht''. Den [[Grunnen (provìnzie)|Grunningsen]] variant ''Borg'' (in et [[Grunnings]] ''börg'', hef den t neet ovvergenommen.
 
