--- a/Burcht.mw
+++ b/Burcht.mw
@@ -32,6 +32,6 @@ Dit Germaanse weurd hef ok - zoas wal meer kriegstermen - staand eholden in et F
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Fort]]
-[[Kategorie:Stad]]
+[[Kategorie:Stad|*]]
 [[Kategorie:Bouwkunde]]
 [[Kategorie:Gebouw]]
