Wysigingen döär [[Special:Contributions/Bdijkstra|Bdijkstra]] ([[User talk:Bdijkstra|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:NaegelBot|NaegelBot]]

--- a/Beukestad.mw
+++ b/Beukestad.mw
@@ -12,4 +12,4 @@ Een '''beukestad''' of '''bookestad''' is een darp of stad dat zich als dusdoani
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Kultuur]]
 [[Kategorie:Literatuur]]
-[[Kategorie:Stad|*]]
+[[Kategorie:Stad]]
