Wysigingen döär [[Special:Contributions/Bdijkstra|Bdijkstra]] ([[User talk:Bdijkstra|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:CommonsDelinker|CommonsDelinker]]

--- a/Bolwark_(stad).mw
+++ b/Bolwark_(stad).mw
@@ -14,4 +14,4 @@ In et Fraans wodden et woord ''bolwark'' oaver-enommen as ''boulevard'', um doar
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Fort]]
-[[Kategorie:Stad|*]]
+[[Kategorie:Stad]]
