Verwysing nå döärverwyssyde repareerd ([[Bokel]] nå [[Bokel (Eanske)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Eanske.mw
+++ b/Eanske.mw
@@ -37,7 +37,7 @@ Eanske is önnerverdeald in 5 stadsdealn.
 *[[Stadsdeal Noord (Eanske)|Stadsdeal Noord]] ([[Lönnker]], [[Deppenbrook]], [[Bolhoar]], [[Mekkelholt]], [[Roombekke (wiek)|Roombekke]], [[Twekkelerveald]], [[Rigtersbleek]], [[Bruggenmors]], [[Universiteat Tweante]])
 *[[Stadsdeal Oost (Eanske)|Stadsdeal Oost]] ([[Wooldrik]], [[Velve-Leendenhof]], [[De Eschmarke]], [[t Ribbelt]], [[Stokhorst]], [[Dolphia]], [[t Heugelaand]], [[Glanerbrug]])
 *[[Stadsdeal Zuud (Eanske)|Stadsdeal Zuud]] ([[Wesselerbreenk]], [[Helmerhook]], [[Stroinkslaanden]], [[Brookheurn]])
-*[[Stadsdeal West (Eanske)|Stadsdeal West]] ([[Bosweenkel]], [[Ruuwnbos]], [[Pathmos]], [[Stadsveald]], [[t Bruggert]], [[t Zwering]], [[t Hawengebeed]], [[De Marssteade]], [[Bokel]], [[Ossel]], [[Twekkel]])
+*[[Stadsdeal West (Eanske)|Stadsdeal West]] ([[Bosweenkel]], [[Ruuwnbos]], [[Pathmos]], [[Stadsveald]], [[t Bruggert]], [[t Zwering]], [[t Hawengebeed]], [[De Marssteade]], [[Bokel (Eanske)|Bokel]], [[Ossel]], [[Twekkel]])
 
 ==Transport==
 ===Stroaten===
