--- a/Eanske.mw
+++ b/Eanske.mw
@@ -5,7 +5,7 @@
 | bestansnaam wapen = Enschede wapen.svg
 | lokasie = LocatieEnschede
 | gemeente = '''Eanske'''
-| previnsie = [[Bestaand:Flag Overijssel.svg|20px|Oaveriessel]] [[Oaweriessel]]
+| previnsie = [[Bestaand:Flag Overijssel.svg|20px|border|Oaveriessel]] [[Oaweriessel]]
 | oppervlak = 142,75
 | oppervlak laand = 141,09
 | oppervlak water = 1,67
@@ -20,7 +20,7 @@
 | webstee = [http://www.enschede.nl/ www.enschede.nl]
 | region = NL-OV
 }}
-[[Ofbeelding:2013-Enschede.jpg|300px|thumb|right|Topogroafiese koarte van 2013.]]
+[[Ofbeelding:2013-Enschede.jpg|300px|thumb|Topogroafiese koarte van 2013.]]
 
 '''Eanske''' ([[Nederlaands]]: ''Enschede'',  tiedns [[Carnaval]]: ''Krekkelstad'') is ne gemeente in [[Tweante]] in de [[Nederlaand]]se proveensie [[Oaveriessel]]. Eanske is de grötste stad van Oaveriessel. De stad lig zuudoostelik van [[Hengel (Oaveriessel)|Hengel]] en har in [[2005]] 153.679 inwonners. De gemeente Eanske hef ne öppervlakte van 142,75 veerkaante kilometer en har op n eerstn jannewoari [[2020]] 159.734 inwonners. Dat gef ne bevölkingsdichtheid van 1132 inwonners per veerkaante kilometer. Nöast de stad Eanske zölf heurt ok de döarpe [[Bokel (Eanske)|Bokel]], de [[Glanerbrug]], [[Lönnker]] en [[Ossel]] töt de gemeente, net as de landelike gebeedn [[Twekkel]] en [[Goorseveald]]. De gemeente greanst in t oostn aan de [[Duutslaand|Duutse]] gemeente [[Gronauwe]] ([[Buorken (district)|Borken]], [[Noordrhain-Westfele|Noordrien-Westfoaln]]). In t zuudwestn lig [[Hoksebarge]], in t westn [[Hengel (Oaveriessel)|Hengel]], in t noordwestn [[Deenkellaand]], in t noordn [[Oldnzel]] en in t noordoostn [[Loster]]. 
 
@@ -41,7 +41,7 @@ Eanske is önnerverdeald in 5 stadsdealn.
 
 ==Transport==
 ===Stroaten===
-De wichtigste wegge van Eanske is de [[Sentrumringe|Ringe]], ok wal bekeand as n ''Seengel''. Disse löp öm de wieke [[Binnenseengelgebeed]] hen en zörg derveur det de [[Binnenstad (Eanske)|Binnenstad]] nich te völ verkear möt verwarken. Vanof de Ringe goat der völle wichtige stroaten noar de boetenkaante van de stad: de [[Westerval]] en [[Zuderval]] zorgt derveur de't sentrum met de [[Riekswegge 35|A35/N35]] verbönnen is, moar t is ok dreks verbönnen met de wegn noar [[Hengel]], [[Hoksebarge]] ([[Riekswegge 18|N18]]), [[Buurse]], [[Alstea]], de [[Gronauwe]], [[Loster]], [[Oldnzel]] en [[Döarningn]]. Disse wegn öntspreengt in de Binnenstad, moar wört pas warklik grötte noadet zee de Ringe passeard bint.
+De wichtigste wegge van Eanske is de [[Sentrumringe|Ringe]], ok wal bekeand as n ''Seengel''. Disse löp öm de wieke [[Binnenseengelgebeed]] hen en zörg derveur det de [[Binnenstad (Eanske)|Binnenstad]] nich te völ verkear möt verwarken. Vanof de Ringe goat der völle wichtige stroaten noar de boetenkaante van de stad: de [[Westerval]] en [[Zuderval]] zorgt derveur de't sentrum met de [[Riekswegge 35|A35/N35]] verbönnen is, moar t is ok dreks verbönnen met de wegn noar [[Hengel (Oaveriessel)|Hengel]], [[Hoksebarge]] ([[Riekswegge 18|N18]]), [[Buurse]], [[Alstea]], de [[Gronauwe]], [[Loster]], [[Oldnzel]] en [[Döarningn]]. Disse wegn öntspreengt in de Binnenstad, moar wört pas warklik grötte noadet zee de Ringe passeard bint.
 
 Öp t loatst is der ok nog de boetenste ringe, dee start biej de [[Universiteat Tweante]] en dan deur t [[Hoawngebeed (Eanske)|Hoawngebeed]], kruuzend met de N18, laanks de [[[Helmerhook]], deur [[Wesselerbreenk]] en [[Stroinkslaanden]], deur t plattelaand noar [[t Wooldrik]], laanks [[Velve-Leendenhof]] en [[Stokkerst]] biej n dreaspröng van de Oldnzelsestroate en Lösterstroate endet. Disse roete geet oawer de ''Auke Vleerstraat'', ''Usselerrondweg'', ''Broekheurnerring'', ''Zuid-Eschmarkerondweg'' en ''Noord-Eschmarkerondweg''.
 
@@ -49,7 +49,7 @@ De wichtigste wegge van Eanske is de [[Sentrumringe|Ringe]], ok wal bekeand as n
 [[Bestaand:Enschede stationsplein.JPG|thumb|right|300px|Stasjonpleane Eanske.]]
 De gemeante Eanske hef vier treanstasjons: [[Stasjon Eanske]], [[Stasjon Eanske Dreenerl]], [[Stasjon Eanske De Eschmarke]] en [[Stasjon Glanerbrug]]. Verlean stasjons bint [[Stasjon Eanske Noord]], [[Stasjon Eanske Zuud]], [[Stasjon Lönnker]], [[Stasjon Brokern]], [[Stopplaats Hengeloschestraat]] en [[Stopplaats Oldenzaalschestraat]].
 
-Vanoet stasjon Eanske vertrekt de Intercity's 1600 noar [[Hengel]], [[Deventer|Deamter]], [[Apeldoorne (stad)|Apeldoorne]], [[Amersfoort]], [[Stasjon Amsterdam Zuud|Amsterdam Zuud]] en [[Skiphol]] en 1700 noar Hengel, Deamter, Amersfoort, [[Stasjon Utrech Sentroal|Utrech Sentroal]], [[Golda]], woar de treane splitst wör, woarnoa ean deal wieter geet noar [[Stasjon N Heeg Sentroal|N Heeg Sentroal]] en t oare deal wieter geet noar [[Stasjon Rotterdam Sentroal|Rotterdam Sentroal]].
+Vanoet stasjon Eanske vertrekt de Intercity's 1600 noar [[Hengel (Oaveriessel)|Hengel]], [[Deventer|Deamter]], [[Apeldoorne (stad)|Apeldoorne]], [[Amersfoort]], [[Stasjon Amsterdam Zuud|Amsterdam Zuud]] en [[Skiphol]] en 1700 noar Hengel, Deamter, Amersfoort, [[Stasjon Utrech Sentroal|Utrech Sentroal]], [[Golda]], woar de treane splitst wör, woarnoa ean deal wieter geet noar [[Stasjon N Heeg Sentroal|N Heeg Sentroal]] en t oare deal wieter geet noar [[Stasjon Rotterdam Sentroal|Rotterdam Sentroal]].
 
 Stasjons Eanske en Dreenerl wör an-doan deur de Sprinters 7000 noar Hengel, [[Almelo]], [[Riesn]], [[Holten]], Deamter, Twello en Apeldoorne en 7900 noar Hengel, Almelo, [[Nijverdal]], [[Raolte|Roalte]] en [[Zwol]]. Eanske, De Eschmarke en Glanerbrug wört an-doan deur de [[Regionalbahn|Regionalbahntreane]] van [[DB Regio NRW]] 20180/RB64 noar [[Münster Hauptbahnhof|Münster (Westf.) Hbf]] en 20230/RB51 noar [[Dortmund Hauptbahnhof|Dortmund Hbf]].
 
