Verwysing nå döärverwyssyde repareerd ([[Hengelo]] nå [[Hengel (Oaveriessel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Thomas_Ainsworth.mw
+++ b/Thomas_Ainsworth.mw
@@ -1,6 +1,6 @@
 '''Thomas Ainsworth''' ([[22 december]] [[1795]], [[Bolton Le Moors]], [[Verienigd Keuninkriek]] - [[13 febrewaori]] [[1841]], [[Wierden]]) was een Britse [[industrieel]] en de grondlegger van de [[Tweante|Twèentse]] [[textiel|textielindustrie]].
 
-Ainsworth warkten een steugien bi'j 't staolbedrief Cockerill in 't [[België|Belgische]] [[Seraing]]; ok warkten e in 't westen van [[Nederlaand]]. Vanof 1831 voerden e in oost-Nederlaand en [[Westfaolen]] opdrachten uut. Een toevallige ontmoeting in [[Hengelo]] mit [[Willem de Clerq]], secretaris van de [[Nederlandsche Handel-Maatschappij]] (NHM), leidden töt de oprichting van een [[weefschoele]] in [[Goor]] in 1833, waoroaver Ainsworth de leiding kreeg (töt 1836). An Twèentse wevers wördden in rap tempo eleerd te warken op [[Calicot-getouwen]] mit een verbèterde [[snelspoel]]. Al vlogge wördden d'r ok weefschoelen lösedaone in [[Deepn]], [[Eanter]] en [[Holten]].
+Ainsworth warkten een steugien bi'j 't staolbedrief Cockerill in 't [[België|Belgische]] [[Seraing]]; ok warkten e in 't westen van [[Nederlaand]]. Vanof 1831 voerden e in oost-Nederlaand en [[Westfaolen]] opdrachten uut. Een toevallige ontmoeting in [[Hengel (Oaveriessel)|Hengelo]] mit [[Willem de Clerq]], secretaris van de [[Nederlandsche Handel-Maatschappij]] (NHM), leidden töt de oprichting van een [[weefschoele]] in [[Goor]] in 1833, waoroaver Ainsworth de leiding kreeg (töt 1836). An Twèentse wevers wördden in rap tempo eleerd te warken op [[Calicot-getouwen]] mit een verbèterde [[snelspoel]]. Al vlogge wördden d'r ok weefschoelen lösedaone in [[Deepn]], [[Eanter]] en [[Holten]].
 
 De textieltechnicus Ainsworth begunden pruven te nemen mit nog fienere soorten ketoen zoas [[drokketoen]] en [[cambric]]. De NHM vreug hum een modelweveri'je en [[vlasspinneri'je]] te stichten ecombineerd mit een agentschop. Zien keuze völ op de umgeving van 't kruuspunt van de straotweg van Zwolle naor Almelo mit de revier de [[Regge]]. In een directievergaderige wördden veur dizze plek een name uuteprakkezeerd: [[Nijverdal]]. De bedrievigheid zol uutgruuien töt de tègenwoordige plaatse mit dizze name. De eerste stien veur 't febriek wördden elegd op 14 meie 1836.
 
