--- a/Twentsch_kuiernat.mw
+++ b/Twentsch_kuiernat.mw
@@ -1,4 +1,4 @@
-'''Twentsch kuiernat''' is nen stoarkn draank oet [[Hengel]] in [[Tweante]]. t Is nen lechtrodigen [[likeur]] met 30% [[alkohol]] wat noar vanille smaakt. t Wörd seend [[1870]] distilleerd duur Berghorst in Hengel.
+'''Twentsch kuiernat''' is nen stoarkn draank oet [[Hengel (Oaveriessel)|Hengel]] in [[Tweante]]. t Is nen lechtrodigen [[likeur]] met 30% [[alkohol]] wat noar vanille smaakt. t Wörd seend [[1870]] distilleerd duur Berghorst in Hengel.
 
 t Dreankn löt zik good mengn met aandere draankn, zo as [[appelsien|sinaasappelsap]], [[koffie]] en [[cola]]. Wieders wörd t duur ethuuze en bakkers völle broekt in häpkes en gebäks.
 
