Verwysing nå döärverwyssyde repareerd ([[Hengel]] nå [[Hengel (Oaveriessel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/F35_(feetssnelweg).mw
+++ b/F35_(feetssnelweg).mw
@@ -1,12 +1,12 @@
 De '''F35''' is ne [[feetssnelweg]] dee noe nöch an-legd wör tuskn [[Nijverdal]] en [[Eanske]], met ziejtäkke noar [[t Vjenne]] en [[Oldnzel]]. t Trajekt is deal van t [[Heugwoardig feetsnetwark Tweante]]. n Noam F35 is boaseard öp n noam van de [[Riekswegge 35|A35/N35]]-auto(snel)wegge dee parallel an t F35-trajekt leg.
 
 De trajektn woaröp - veura in de spitsuurn - t measte feetsverkear verwächt wör bint:
-*[[Boorn]] - [[Hengel]] - [[Eanske]]
+*[[Boorn]] - [[Hengel (Oaveriessel)|Hengel]] - [[Eanske]]
 *[[Almelo]] - Woaterriek - [[t Vjenne]]
 *[[Almelo]] - [[Wierdn]]/Zuudbrook
 
 ==Anwezigheaid==
-[[Ofbeelding:Fietssnelweg F35 at Go Planet.jpg|200px|thumb|right|F35 ten heugte van Stasjon Eanske Dreenerl.]]
+[[Ofbeelding:Fietssnelweg F35 at Go Planet.jpg|200px|thumb|F35 ten heugte van Stasjon Eanske Dreenerl.]]
 In [[2009]] bint de earste deale in Almelo reoaliseard. Dit deal kön metgoan me't projekt [[Almelo Verdiept]].
 
 Tuskn t [[FBK-Stadion]] in Hengel en t [[Stasjon Eanske Dreenerl]] is t trajekt ok a an-legd. De feetssnelwegge leg doar ten zuudn van de spoorliende. D'r kömn a vlöks probleamn noa't lösdoon öp 22 novemeber [[2011]] biej de oawerwegge woar de feetssnelwegge t [[Hengel-rakkordement AKZO|AKZO-rakkordement]] krös: feetsers kömn te valn öp t spoor hier. Öm det te veurkömn is d'r extra verlichtige biej-ploatst en bint d'r nieje woarskuwigesbörde.
