Verwysing nå döärverwyssyde repareerd ([[Artsach]] nå [[Republik Artsach]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1199,7 +1199,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |[[Arabies|Arabisk]]: Al-Jumhūrīya al-ʿArabīya aṣ-Ṣaḥrāwīya ad-Dīmuqrāṭīya / الجمهورية العربية الصحراوية الديمقراطية <br /> [[Spaans]]k: República Árabe Saharaui Democrática (RASD)
 |45<ref>De [[Arabiske Demokratiske Republik Sahara]] (ADRS) hevt feitelik allinnig gesag oaver een klein deyl van de [[Westelike Sahara]]. De rest wördt de facto bestüürd döär Marokko, mär et Marokkaanske bestüür oaver de Westelike Sahara wördt internationaal neet erkend. De ADRS is ooyt döär 84 landen erkend. 39 landen hebben höär erkenning lykewel wear in-etrökken of up-eskort.</ref>
 |-
-|[[Artsach]]
+|[[Republik Artsach|Artsach]]
 |Republik Artsach
 |[[Stepanakert]]
 |[[Armeens]]k: Artsakh / Արցախ
