Verwysing nå döärverwyssyde repareerd ([[Malta]] nå [[Malta (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Gibraltar.mw
+++ b/Gibraltar.mw
@@ -36,7 +36,7 @@ Gibraltar is ean van de dichtstbevölkte gebeedn van de wearld, met n volksantal
 === Volker ===
 n Kenmeark van de Gibraltese bevolking is det ze [[etniese groep|oorsproonkelik oaweral wegkomt]]. De volkssaamnstelling van Gibraltar löt ne mengeling van [[Europa (continent)|Europese]] völker en ekonomiese migraantn zeen, dee in dreehonnerd joar noar Gibraltar kömn, noadet zowat alle Spaanse inwonner vortgungn in [[1704]].
 
-De heufdvolker, volgns n naams in t verkiezignsstelsel, bint [[Groot-Brittanje|Britn]] (27%), Spaans (26%, veural Andalusiërs, moar ok ongevear 2% [[Minorka]]ann), [[Genoa]]ann en annere [[Italië|Italjaann]] (19%), [[Portugal|Portugeezn]] (11%), [[Malta|Malteezn]] (8%) en [[Joden|Jödn]] (3%). Dr is ne grote verskeidnheid van annere groepn, zo as [[Marokko|Marokkaann]], [[India|Indiërs]], [[Fraankriek|Fraansken]], [[Oostenriek]]ers, [[Volksrippebliek China|Sjineezn]], [[Japan]]neezn, [[Pooln]] en [[Denemaarken|Deann]].<ref>Archer, Edward G.: [http://books.google.com/books?id=2ip0C6odET4C&lpg=PP1&dq=archer%20identity%20empire%20gibraltar&hl=es&pg=PA35#v=snippet&f=false ''Gibraltar, identity and empire'']. Routledge Advances in European Politics</ref>
+De heufdvolker, volgns n naams in t verkiezignsstelsel, bint [[Groot-Brittanje|Britn]] (27%), Spaans (26%, veural Andalusiërs, moar ok ongevear 2% [[Minorka]]ann), [[Genoa]]ann en annere [[Italië|Italjaann]] (19%), [[Portugal|Portugeezn]] (11%), [[Malta (laand)|Malteezn]] (8%) en [[Joden|Jödn]] (3%). Dr is ne grote verskeidnheid van annere groepn, zo as [[Marokko|Marokkaann]], [[India|Indiërs]], [[Fraankriek|Fraansken]], [[Oostenriek]]ers, [[Volksrippebliek China|Sjineezn]], [[Japan]]neezn, [[Pooln]] en [[Denemaarken|Deann]].<ref>Archer, Edward G.: [http://books.google.com/books?id=2ip0C6odET4C&lpg=PP1&dq=archer%20identity%20empire%20gibraltar&hl=es&pg=PA35#v=snippet&f=false ''Gibraltar, identity and empire'']. Routledge Advances in European Politics</ref>
 
 De Gibraltese telling van 2001<ref name=CEN>[http://www.gibraltar.gov.gi/images/stories/PDF/statistics/Census_of_Gibraltar_2001.pdf Census of Gibraltar 2001.]</ref> deeln de nasjonaliteitn as völg in: 83.22% Gibraltees, 9.56% "Oar Brits", 3.50% Marokkaans, 1.19% Spaans and 1.00% "Oar EU".
 
@@ -94,7 +94,7 @@ De munteenheid van Gibraltar is [[Gibraltarpoond]], oetgevn deur de Regearing va
 
 == Kultuur ==
 [[Bestaand:Gibraltar Tercentenary flag display.jpg|thumb|300-joarige viering van Gibraltar.]]
-De kultuur van Gibraltar is ne ofspegeling van de verskeidnheid van de Gibraltese ofstamming. Skoonwal dr Spaanse (oet t noabieleagn [[Andalusië]]) en Britse invloodn bunt, is de etniese oorsprong van völ Gibralteezn wat diverser. Annere ofstammings bunt van [[Genua]], [[Malta]], [[Portugal]] en [[Duutslaand]]. Dr bunt ok nog [[Sefardiese Jödn]], [[Marokko|Marokkaann]] en [[India|Indiërs]]. Dr is völ invlood van de Britn; [[Engels]] is de sproak van de regearing, [[haandel]], [[oonderwies|onnerwies]] en de [[media]]. 
+De kultuur van Gibraltar is ne ofspegeling van de verskeidnheid van de Gibraltese ofstamming. Skoonwal dr Spaanse (oet t noabieleagn [[Andalusië]]) en Britse invloodn bunt, is de etniese oorsprong van völ Gibralteezn wat diverser. Annere ofstammings bunt van [[Genua]], [[Malta (laand)|Malta]], [[Portugal]] en [[Duutslaand]]. Dr bunt ok nog [[Sefardiese Jödn]], [[Marokko|Marokkaann]] en [[India|Indiërs]]. Dr is völ invlood van de Britn; [[Engels]] is de sproak van de regearing, [[haandel]], [[oonderwies|onnerwies]] en de [[media]]. 
 
 Gibraltars onofhaankelikheid wörd alle joarn vierd op [[10 september]]. t Is ne laandelike vakaansie, woarin de meeste Gibralteezn zik in roodwitte klear stekt (de nasjonale kleurn) en 30.000 ballonn wordt lösloatn (dee stoat veur t Gibraltese volk). De 300ste viering van t [[Innemn van Gibraltar]] wör vierd in [[2004]] op [[4 augustus]] (''Tercentenary Day'' neumd). Op dizzen dag kreg de [[Keuninklike Marine]] van Groot-Brittanje de Vrieheid van de Stad Gibraltar as daank en erkenning veur t langstaandige verbaand met Gibraltar, en n meanskelike ketn van gibralteezn in t rood, wit en t blauw maakn nen kreenk um de Rots.
 
