/* Uutgånde verwysingen */ Heur >> Syn. In myn dialekt kryget beide vrouwelike en männelike personen syn as besittelik naamwoord.

--- a/Metje_Blaak.mw
+++ b/Metje_Blaak.mw
@@ -26,7 +26,7 @@ Seyd at see med et hurenwark estopped is, düt see böke en kinderböke skryven.
 
 ==Uutgånde verwysingen==
 * [http://www.metjeblaak.nl/ Metjeblaak.nl - Eygene websteade]
-* [https://www.youtube.com/channel/UCxPZDPXLJZVO8g1RBMl-P1g Blaak heur YouTube]
+* [https://www.youtube.com/channel/UCxPZDPXLJZVO8g1RBMl-P1g Blaak syn YouTube]
 
 {{DEFAULTSORT:Blaak, Metje}}
 [[Kategorie:Tweants artikel]]
