--- a/Yuri_Gagarin.mw
+++ b/Yuri_Gagarin.mw
@@ -5,6 +5,7 @@ Gagarin wör geboren in et dörpke [[Klusjino]] by [[Gzjatsk]] (ne stad dee as l
 Vostok 1 was Gagarin syn eanigste rüümdevlucht, mär hee stünd noch inedeyld as achtervang vöär de bemanning van de [[Soyuz 1]]-missy, den as med nen doudeliken afloup dalestörteden. Dårby küm Gagarin syn måt [[Vladimir Komarov]] uut de tyd. Ümdat Gagarin den internationalen fotojungen vöär de sovjets öär rüümdesukses was, haalden se em subit van alle wyder eplande rüümdereisen. Hee kreag do träning as piloot by de Zjukovsky-ingeniöörsakademy van de luchtmacht üm gewoane vleegtüge te vlegen, wåras hee up den [[17 febrewaori|17. february]] [[1968]] vöär slaagden. Vyv weaken later, do as hee med synen leyrmeister Vladimir Seryogin in nen [[MiG-15]] [[stråljager]] vlöyg, stortten hee dale by et städke Kirzjach.
 
 {{DEFAULTSORT:Gagarin, Yuri}}
+[[Kategorie:Tweants artikel]]
 [[Kategorie:Ruumte]]
 [[Kategorie:Ruslaand]]
 [[Kategorie:Politikus]]
