*Empty MediaWiki Message*

--- a/Yuri_Gagarin.mw
+++ b/Yuri_Gagarin.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Yuri_Gagarin_%281961%29_-_Restoration.jpg|thumb|300px|right|Yuri Gagarin]]
-'''Yuri Alekseyevich Gagarin ('''[[Cyrillisch|Kyrillisk]]: '''Юрий Алексеевич Гагарин''' ([[9 meert|9. määrt]] [[1934]] – [[27 meert|27. määrt]] [[1968]]) was nen piloot en rüümdevöärder vöär de [[luchtmacht]] van de domålige [[Sovjet-Uny]] . Hee was den eyrsten menske den as in de rüümde buten den [[dampkring]] küm, wårmed hee nen grouten trad vöär de rüümdevårderye makeden en de Sovjet-Uny nen flinken vöärsprung gavven in de [[Space Race]], den wedloup üm de rüümde. Med syn vårtüüg Vostok 1 makeden hee eyne bane üm de [[aerde]] up den [[12 april|12. april]] van [[1961]]. Dårmed wör hee nen internationalen bekendheid en kreag hee vöäle medailles en titels, sou as ''Held van de Sovjetuny'', de höygste eyre van syn land.
+'''Yuri Alekseyevich Gagarin ('''[[Cyrillisch|Kyrillisk]]: '''Юрий Алексеевич Гагарин''', van den [[9 meert|9. määrt]] [[1934]] – [[27 meert|27. määrt]] [[1968]]) was nen piloot en rüümdevöärder vöär de [[luchtmacht]] van de domålige [[Sovjet-Uny]] . Hee was den eyrsten menske den as in de rüümde buten den [[dampkring]] küm, wårmed hee nen grouten trad vöär de rüümdevårderye makeden en de Sovjet-Uny nen flinken vöärsprung gavven in de [[Space Race]], den wedloup üm de rüümde. Med syn vårtüüg Vostok 1 makeden hee eyne bane üm de [[aerde]] up den [[12 april|12. april]] van [[1961]]. Dårmed wör hee nen internationalen bekendheid en kreag hee vöäle medailles en titels, sou as ''Held van de Sovjetuny'', de höygste eyre van syn land.
 
 Gagarin wör geboren in et dörpke [[Klusjino]] by [[Gzjatsk]] (ne stad dee as later når em enöömd wör). In synen jöägd warkeden Gagarin by ne [[geterye]], by en stålbedryv in [[Ljubertsy]]. Hee güng by de luchtmacht as piloot en wör underbracht up luchtmachtbasis Luostari, körtby de [[Noorweagen|noorske]] grense, vöärdat hee med noch vyv anderen uuteköäsen wör üm rüümdevöärder te worden in et nye rüümdeprogramma van de Sovjetuny. Nå synen vlucht wör Gagarin et gesichte van de rüssiske rüümtevöärderye en underdirektöör vöär et kosmonautiske träningscentrum, wat når em vernöömd wör. Ouk wör hee in [[1962]] nen ofvaerdigden vöär de Uny-Sovjetråd en dårnå de Nationaliteitensovjet (et laeger- en höygerhuus van de Sovjets).
 
